# NetVendor

./: .gitignore  ADVANCED.md  Apple-Devices.txt  Build-Command2  CONFIG.md  Cisco-Meraki-Devices.txt  Dell-Devices.txt  EXECUTION_PATHS.md  EXECUTION_SUMMARY.md  IP-ARP.txt  NetVendor.py  Other-Cisco-Devices.txt  README.md  ShadowVendor.py  TEST_COVERAGE.md  TUTORIAL.md  Vendor-Finder.py  Vendor-Finder.spec  bandit.yaml  company_list.txt  generate_test_data.py  generator_test.py  ip-arp-4-26-2022  netvendor.conf.example  netvendor.yaml.example  oui_list_final.txt  oui_manager.py  pyproject.toml  raw_vendor_list.json  requirements-dev.txt  requirements.txt  setup.py  shadowvendor.conf.example  shadowvendor.yaml.example  style-guidelines.txt  vendor_output_handler.py
.github/workflows/: codeql-analysis.yml
docs/: capture_dashboard_screenshots.py  generate_images.py  requirements.txt
netvendor/: __init__.py  __main__.py  api.py  config.py
netvendor/core/: __init__.py  netvendor.py  oui_manager.py  readme.md
netvendor/data/: oui_cache.json
netvendor/utils/: __init__.py  drift_analysis.py  helpers.py  runtime_logger.py  siem_export.py  vendor_output_handler.py
shadowvendor/: __init__.py  __main__.py  api.py  config.py
shadowvendor/core/: __init__.py  netvendor.py  oui_manager.py  readme.md
shadowvendor/utils/: __init__.py  drift_analysis.py  helpers.py  runtime_logger.py  siem_export.py  update_oui_cache.py  vendor_output_handler.py
tests/: conftest.py  test_api.py  test_execution_paths.py  test_netvendor.py  test_oui_manager.py  test_vendor_output_handler.py
tests/data/: README.md  test-arp-table.txt  test-mac-list.txt  test-mac-table.txt
