[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowvendor"
version = "14.0.0"
description = "Network device vendor analysis tool - Transform MAC address tables into interactive dashboards, detect new vendors, and export SIEM events for security monitoring"
authors = [
    { name = "Stewart Alexander", email = "stewart@stewalexander.com" }
]
keywords = [
    "network-analysis",
    "mac-address",
    "network-security",
    "siem",
    "network-monitoring",
    "vendor-detection",
    "cybersecurity",
    "network-engineering",
    "python",
    "network-automation",
    "posture-detection",
    "network-visualization",
    "cisco",
    "juniper",
    "arp-table",
    "network-device-analysis"
]
dependencies = [
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.1",
    "rich>=13.7.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
shadowvendor = "shadowvendor.core.netvendor:main"
update-oui-cache = "shadowvendor.utils.update_oui_cache:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shadowvendor*"]
namespaces = false

[project.urls]
Homepage = "https://github.com/StewAlexander-com/ShadowVendor"
Repository = "https://github.com/StewAlexander-com/ShadowVendor.git" 